--- a/index.css
+++ b/index.css
@@ -344,6 +344,7 @@ align-self: self-start;
     flex-direction: row;
     gap: 14px;
     justify-content: flex-end;
+    padding-left: 140px;
     align-items: center;
 }
 
@@ -354,7 +355,7 @@ align-self: self-start;
     justify-content: flex-end;
     padding: 18px;
     border-radius: 7px;
-    width: 394px;
+    width: 100%;
     height: 351px;
     position: relative;
     overflow: hidden;
@@ -392,14 +393,14 @@ align-self: self-start;
 .how-container{
     display: flex;
     flex-direction: row;
-margin-top: 250px;
+margin-top: 285px;
     padding: 60px 120px;
     gap: 61px;
 }
 
 .how-container .video{
     width: 100%;
-    height: 586px;
+    height: 500px;
     background: #000000;
     display: flex;
     align-items: center;
