--- a/index.css
+++ b/index.css
@@ -285,7 +285,26 @@ header button{
     width: 70%;
 }
 
+.career-pagi{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+    margin-top: -20px;
+    
+}
 
+.career-pagi div{
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background: #E1E1E1;
+}
+
+.career-pagi div.active{
+    background: #F19319 ;
+}
 
 .career-container{
     display: flex;
@@ -395,7 +414,7 @@ align-self: center;
 }
 
 .career-item div p{
-    font-size: 14px;
+    font-size: 13px;
     color: #FFFFFF;
     font-weight: 600;
     text-align: center;
