push left design

--- a/index.css
+++ b/index.css
@@ -196,8 +196,18 @@ header button{
     background: #DD8A0D;
     flex-shrink: 0;
     margin-top: 1%;
+    display: none;
 }
-
+.vr-mobile{
+    height: 25px;
+    width: 2px;
+    background: #DD8A0D;
+    flex-shrink: 0;
+    margin-top: 1%;
+}
+.justify-center{
+    justify-content: center;
+}
 .span-color{
     color: #F19319;
     font-family: krona one;
@@ -993,6 +1003,18 @@ footer{
     .career-pagi{
         display: none;
     }
+
+    .vr-mobile{
+        height: 25px;
+        width: 2px;
+        background: #DD8A0D;
+        flex-shrink: 0;
+        margin-top: 1%;
+        display: none;
+    }
+    .justify-center{
+        justify-content: initial;
+    }
     
     .hero-bg{
         background-color: #F6F6F6;
@@ -1176,6 +1198,7 @@ footer{
         gap: 20px;
         width: 100%;
         gap: 20px;
+        
     }
     .vr-normal{
         height: 40px;
@@ -1183,6 +1206,8 @@ footer{
         background: #DD8A0D;
         flex-shrink: 0;
         margin-top: 1%;
+        display: flex;
+    
     }
     
     .span-color{
