--- a/index.css
+++ b/index.css
@@ -29,9 +29,21 @@ header img{
 header ul{
     list-style: none;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 28px;
-    display: none;
+    position: fixed;
+  
+    top: 0;
+    left: -100%;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    background: #FFFFFF;
+    align-items: center;
+    z-index: 10;
+    transition: all 400ms ease-in-out;
+        
 }
 
 
@@ -43,12 +55,19 @@ header ul li.active{
     font-family: inter;
 }
 
+.close{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
 header ul li{
     width: 96px;
     font-size: 18px;
     font-weight: 400;
     color: #A6A6A6;
     font-family: inter;
+    text-align: center;
 
 }
 
@@ -1043,8 +1062,16 @@ footer{
         display: flex;
         flex-direction: row;
         gap: 28px;
+        position: static;
+        height: initial;
+        background: none;
+        width: initial;
     }
     
+
+    .close{
+        display: none;
+    }
     
     header ul li.active{
         width: 96px;
